Fixed menu on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ color: #fff;
 	box-shadow:0 4px 5px -3px #ececec;
 	position:relative;
 	background:#fff;
+	z-index: 1;
 }
 .main-nav{
 	text-align:center;
